@startuml

left to right direction

abstract Instrumento {
-{field} nombre: String
-{field} material: String
-{field} codigo: String
-{field} precio: int
-{field} stock: int
+{method} Instrumento(nombre: String, material: String, codigo: String,\nprecio: int, stock: int)
+{method} getNombre(): String
+{method} getMaterial(): String
+{method} getCodigo(): String
+{method} getPrecio(): int
+{method} getStock(): int
+{method} setStock(stock: int): void
}
class Cuerda {
-{field} tipoCuerda: String
-{field} numCuerdas: int
-{field} tipo: String
+{method} Cuerda(nombre: String, material, String, codigo: String\nprecio: int, stock: int\ntipoCuerda: String, numCcuerdas: int,\ntipo: String)
+{method} getTipoCuerda(): String
+{method} getNumCuerdas(): int
+{method} getTipo(): String
}
class Percusion {
-{field} percusion: String
-{field} altura: String
+{method} Percusion(nombre: String, material: String\ncodigo: String, precio: int, stock: int\npercusion: String, altura: String)
+{method} getTipoPercusion(): String
+{method} getAltura(): String
}
class Viento {
+{method} Viento(nombre: String, material: String, codigo: String, precio: int. stock: int)
}
class ListaInstrumentos {
-{field} max: int
-{field} tamanio: int
-{field} Instrumento listaInstrumentos[]
+{method} ListaInstrumentos(max: int)
+{method} obtenerInstrumento(posicion: int): Instrumento
+{method} obtenerInstrumentoCodigo(codigo: String): Instrumento
+{method} agregarInstrumento(Instrumento instrumento): void
+{method} buscarInstrumento(Instrumento instrumento): int
+{method} eliminarInstrumento(Instrumento instrumento): boolean
+{method} getTamanio(): int
}
interface Sistema {
+{field} agregarInstrumentoMenu(): void
+{field} venderInstrumento(): void
+{field} consultarInventario(): void
+{field} salir(): void
}
class SistemaImpl {
+{field} instrumentos: ListaInstrumentos
+SistemaImpl()
+leerArchivoCsv():void
+menuPrincipal():void
+salir():void
+despliegueInstrumentoCodigo():void
+despliegueInstrumentosTipo():void
+despliegueInstrumentos():void
+obtenerInstrumentos():String[]
}
Sistema "1  " <|.. "1  " SistemaImpl : implementa
Cuerda  --|>  Instrumento
Percusion  --|>  Instrumento
Viento  --|>  Instrumento
SistemaImpl "1" --> "1   " ListaInstrumentos : Administra
Instrumento "0..*" --o "1" ListaInstrumentos : Almacena


@enduml